<resources>
    <string name="app_name">爱心树</string>
    <string name="action_settings">设置</string>
    <string name="home">首页</string>
    <string name="shop">商城</string>
    <string name="message">消息</string>
    <string name="commonwave">公益专区</string>
    <string name="recruit">公益招聘</string>
    <string name="organization">公益组织</string>
    <string name="square">公益广场</string>
    <string name="course">公益课堂</string>

    <string name="my_order">我的订单</string>
    <string name="my_fellow">我的关注</string>
    <string name="my_score">公益积分</string>
    <string name="my_history">浏览记录</string>
    <string name="my_setting">设置</string>
    <string name="my_theme">主题</string>
    <string name="my_help">关于</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="me">我的</string>
    <string name="about">关于</string>
    <string name="other">其他</string>
    <string name="account_later">游客模式</string>
    <string name="logo_text">L</string>
    <string name="log_out">退出登录</string>
    <string name="log_in_please">~(￣(工)￣)~</string>
    <string name="log_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="or">OR</string>
    <string name="username">用户名</string>
    <string name="submit">提交</string>
    <string name="password">密码</string>
    <string name="password_forget">忘记密码?</string>
    <string name="password_again">确认密码</string>
    <string name="error_invalid_password">密码大于4位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="tip">提示</string>
    <string name="ensure_log_out">确定注销？</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="check_head">选择头像</string>
    <string name="change_head">修改头像</string>
    <string name="buy">联系卖家</string>

</resources>
