<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:background="@drawable/user_page_background">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_user_page"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginTop="20dp"
                    app:title="@string/me"
                    android:theme="@style/AppTheme.AppBarOverlay"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_page_head"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/header_6"
                    android:layout_gravity="center_horizontal"
                    app:civ_border_width="3dp"
                    app:civ_border_color="@color/lightblue"/>

                <TextView
                    android:id="@+id/user_page_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/log_in_please"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/divider"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/my_order"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_order"/>

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_order"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/my_fellow"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_head"/>

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_fellow"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/my_score"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_score"/>

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_score"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/my_history"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_history"/>

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_history"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/my_setting"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_settings"/>

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_setting"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/my_theme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_theme"/>

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_theme"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/my_help"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_menu_about"/>

                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_help"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_arrow_right"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/user_page_logout"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_radius_red"
            android:text="@string/log_out"
            android:textColor="@color/white"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>